integration/modules/setup_vcluster/manifests/ingresses/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: tf-vcluster-ingress 
  namespace: tf-vcluster
spec:
  ingressClassName: nginx # use your ingress class name
  rules:
  - host: demo.vcluster.local 
    http:
      paths:
      - backend:
          service:
            name: tf-vcluster
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
